# AGI-Life-Engine

./: .coveragerc  .env.example  .gitignore  ACCEPTANCE_GUIDE.md  ACCEPTANCE_TEST_REPORT.md  AGI_AUTONOMOUS_CORE_V6_0.py  AGI_AUTONOMOUS_CORE_V6_1.py  AGI_AUTONOMOUS_CORE_V6_1_MULTI_BASE.py  AGI_AUTONOMOUS_CORE_V6_2.py  AGI_Life_Engine.py  AGI_V6_1_IMPROVEMENT_PLAN.md  API_TOKEN_LIMITS_COMPARISON.md  CHANGELOG.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_PLAN.md  CODE_QUALITY_ANALYSIS_PROJECT_1769894886.md  CODE_QUALITY_EVALUATION_REPORT.md  CONTRIBUTING.md  FALSE_POSITIVE_TRUNCATION_FIX_REPORT.md  FILES_ANALYSIS_VISUAL.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS_CHECK.md  FIX_SUCCESS_REPORT_V6_2_TRUNCATION.md  GENERATED_FILES_EXPLANATION.md  GITHUB_ACTIONS_FIX_GUIDE.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_PREPARED.md  GITHUB_SYNC_COMPLETE.md  GITHUB_SYNC_TOKEN_BUDGET.md  GITHUB_UPLOAD_CHECKLIST.md  GLM_4.7_CONFIRMATION.md  INSTALL.md  INSTANCE_PRACTICAL_ANALYSIS_REPORT.md  LICENSE  MANIFEST.in  METACOGNITION_ANALYSIS.md  MULTI_FILE_GENERATION_V2_FINAL_REPORT.md  MULTI_FILE_GENERATION_V2_PROGRESS_REPORT.md  MULTI_FILE_GENERATION_V2_SUMMARY.md  MULTI_MODEL_GUIDE.md  (+60 more)
core/: __init__.py  _debug_propose_patch.py  _debug_targeted_patch.py  _demo_target_small.py  _test_life_engine_integration.py  _test_self_mod_tool.py  adaptive_temperature.py  agents_legacy.py  agents_legacy.py.bak_1766792593  architecture_extension.py  architecture_perception.py  audio_preprocessing.py  autonomous_agi.py  autonomous_goal_system.py  autonomy_activator.py  batch_regression_results.json  bayesian_world_model.py  bottleneck_integration.py  cad_observer.py  capability_framework.py  causal_reasoning.py  checkpoint.py  cognitive_bridge.py  cognitive_metrics.py  complementary_analyzer.py  complex_task_generator.py  component_aliases.py  component_versioning.py  creative_exploration_engine.py  creative_fusion.py  creative_fusion_enhanced.py  creative_output_pipeline.py  cross_domain_transfer.py  dashboard.py  decision_cache.py  decision_module.py  deep_reasoning_engine.py  demo_self_modification.py  desktop_automation.py  desktop_automation_click_v2.py  (+180 more)
docs/: AB系统LLM回复.txt  AGI_3D拓扑架构对比分析报告_20260110.md  AGI_Architecture_Extension_Case_Study.md  AGI_BUG_FIX_REPORT_20260117.md  AGI_CONVERSATION_SUMMARY_20260115.md  AGI_Consciousness_Upgrade_Report.md  AGI_Constitution.md  AGI_Current_Architecture_v2.md  AGI_Desktop_Automation_Upgrade.md  AGI_Evolution_Feasibility_Analysis.md  AGI_Evolution_Protocol.md  AGI_Evolution_Roadmap.md  AGI_Existential_Reflection_Cycle2.md  AGI_First_Principles_Evolution.md  AGI_Flywheel_Activation_Report.md  AGI_Reality_Audit.md  (+301 more)
(+304 files in other folders)
