[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-life-engine"
version = "6.1.0"
description = "AGI Life Engine - Advanced Artificial General Intelligence System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "yuzengbaao", email = "your.email@example.com"}
]
keywords = ["agi", "artificial intelligence", "machine learning", "cognitive architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "pyflakes>=3.1.0",
    "bandit>=1.7.5",
]

[project.urls]
Homepage = "https://github.com/yuzengbaao/AGI-Life-Engine"
Repository = "https://github.com/yuzengbaao/AGI-Life-Engine"
Issues = "https://github.com/yuzengbaao/AGI-Life-Engine/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
exclude = ["tests*", "backups*", "node_modules*", ".venv*", "*.egg-info"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "benchmark: Performance benchmarks",
    "stability: Stability tests",
]

[tool.coverage.run]
source = ["core"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2

[tool.pylint.main]
py-version = "3.12"
ignore-paths = [
    "tests",
    "backups",
    "node_modules",
    ".venv",
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "W0212", # protected-access
]
